...
                                                    .fromSTEB(
                                                        0.0, 0.0, 0.0, 16.0),
                                                child: SizedBox(
                                                  width: double.infinity,
                                                  child: TextFormField(
                                                    key: const ValueKey(
                                                        'emailAddress_92zj'),
                                                    controller: _model
                                                        .emailAddressTextController1,
                                                    focusNode: _model
                                                        .emailAddressFocusNode1,
                                                    autofocus: true,
                                                    autofillHints: const [
...
                                                    .fromSTEB(
                                                        0.0, 0.0, 0.0, 16.0),
                                                child: SizedBox(
                                                  width: double.infinity,
                                                  child: TextFormField(
                                                    key: const ValueKey(
                                                        'selenium-password_u8zc'),
                                                    controller: _model
                                                        .seleniumPasswordTextController,
                                                    focusNode: _model
                                                        .seleniumPasswordFocusNode,
                                                    autofocus: true,
                                                    obscureText: !_model
...
                                                child: Padding(
                                                  padding: const EdgeInsetsDirectional
                                                      .fromSTEB(
                                                          0.0, 0.0, 0.0, 16.0),
                                                  child: FFButtonWidget(
                                                    key:
                                                        const ValueKey('Button_c7ax'),
                                                    onPressed: () async {
                                                      GoRouter.of(context)
                                                          .prepareAuthEvent();

                                                      final user =
                                                          await authManager
...
