...
                mainAxisSize: MainAxisSize.max,
                children: [
                  SizedBox(
                    width: double.infinity,
                    height: 480.0,
                    child: Stack(
                      key: const ValueKey('Stack_ikb2'),
                      children: [
                        Image.asset(
                          'assets/images/newslowmotion-Trim-ezgif.com-optimize.gif',
                          width: double.infinity,
                          height: 480.0,
                          fit: BoxFit.cover,
...
                  ),
                ],
              ),
              Padding(
                padding: const EdgeInsetsDirectional.fromSTEB(16.0, 0.0, 16.0, 16.0),
                child: Container(
                  key: const ValueKey('cardTable_6_mrrb'),
                  width: double.infinity,
                  constraints: const BoxConstraints(
                    maxWidth: 1270.0,
                  ),
                  decoration: BoxDecoration(
                    color: FFTheme.of(context).secondaryBackground,
...
